2003-05-05  David Hampton  <hampton@employees.org>

	* macros/openhbci.m4: Fix problem with latest versions of autoconf.

2003-05-03  Christian Stimming  <stimming@tuhh.de>

	* configure.in: Fix hbci and ofx test for handling --disable
	correctly.

2003-05-01  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/qif-import/qif-parse.scm: Don't assume that a
	  date of the form XXXXXXXX is always YYYYMMDD.  There is at least
	  one example where it is MMDDYYYY.  So, test it both ways:
	  xxxxYYYY and YYYYxxxx.  Make sure a 4-digit year "makes sense"
	  (e.g., the year is after 1930). Fixes bug #111889.

2003-04-29  Derek Atkins  <derek@ihtfp.com>

	* src/engine/test/Makefile.am: disable the test-scm-query-import
	  test, since it breaks on guile-1.6 (which does mean that
	  importing into a guile-1.6-based system will fail, but so much
	  else fails when upgrading from 1.6 to 1.8 that it really doesn't
	  matter.  Users will have to reset their reports anyways.

2003-04-28  David Hampton  <hampton@employees.org>
	* src/engine/iso-4217-currencies.scm: Remove two duplicate
	commodities.  The newer name for these commodities was retained.

	* src/app-utils/gnc-euro.c:
	* src/app-utils/gnc-ui-util.c:
	* src/backend/file/io-gncxml-v2.c:
	* src/backend/postgres/test/test-db.c:
	* src/backend/rpc/RpcUtils.c:
	* src/engine/gnc-commodity.c:
	* src/engine/gnc-commodity.h:
	* src/engine/test-core/test-engine-stuff.c:
	* src/gnome/dialog-commodities.c:
	* src/gnome-utils/dialog-commodity.c:
	* src/gnome-utils/dialog-transfer.c:
	* src/import-export/binary-import/druid-commodity.c:
	* src/import-export/qif-import/druid-qif-import.c: Consolidate all
	the tests for an ISO 4217 commodity into a pair of functions.  Use
	these functions throughout the code.
	
2003-04-26  David Hampton  <hampton@employees.org>

	* src/backend/file/gnc-commodity-xml-v2.c: Consolidate duplicate
	strings.

2003-04-23  Christian Stimming  <stimming@tuhh.de>
